[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/Screen.gd" type="Script" id=1]
[ext_resource path="res://ui/popups/Popups.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/Placeholders/Background.jpg" type="Texture" id=3]
[ext_resource path="res://ui/components/Notification.gd" type="Script" id=4]
[ext_resource path="res://ui/windows/NotesWindow.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/windows/EmailWindow.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/windows/InternetWindow.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/windows/GameWindow.tscn" type="PackedScene" id=8]

[node name="Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="GridContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 320.0
margin_bottom = 495.0
custom_constants/vseparation = 50
custom_constants/hseparation = 50
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trash" type="Button" parent="Buttons"]
margin_right = 125.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Trash"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Email" type="Button" parent="Buttons"]
margin_left = 175.0
margin_right = 300.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "E-Mail"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification" type="ColorRect" parent="Buttons/Email"]
visible = false
margin_left = 80.0
margin_top = -10.0
margin_right = 110.0
margin_bottom = 20.0
color = Color( 1, 0, 0, 1 )
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Buttons/Email/Notification"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "1"
align = 1
valign = 1

[node name="Internet" type="Button" parent="Buttons"]
margin_top = 175.0
margin_right = 125.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Internet"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game" type="Button" parent="Buttons"]
margin_left = 175.0
margin_top = 175.0
margin_right = 300.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notes" type="Button" parent="Buttons"]
margin_top = 350.0
margin_right = 125.0
margin_bottom = 475.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Notes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Windows" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailWindow" parent="Windows" instance=ExtResource( 6 )]
visible = false

[node name="GameWindow" parent="Windows" instance=ExtResource( 8 )]
visible = false

[node name="InternetWindow" parent="Windows" instance=ExtResource( 7 )]
visible = false

[node name="NotesWindow" parent="Windows" instance=ExtResource( 5 )]
visible = false

[node name="Popups" parent="." instance=ExtResource( 2 )]

[node name="Bottom Bar" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -49.9999
margin_bottom = 6.10352e-05
color = Color( 0.423529, 0.423529, 0.423529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/Email" to="." method="_on_Email_pressed"]
[connection signal="pressed" from="Buttons/Internet" to="." method="_on_Internet_pressed"]
[connection signal="pressed" from="Buttons/Game" to="." method="_on_Game_pressed"]
[connection signal="pressed" from="Buttons/Notes" to="." method="_on_Notes_pressed"]
